# Regular-Expressions-in-Python

./: 1. Regex Pattern Matching.ipynb  pyproject.toml
