[tool.poetry]
name = "regular expressions in python"
version = "0.1.0"
description = ""
authors = ["A-Quaglia <augustoquaglia@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
